--- a/src/stylesheets/helpers/_helpers.scss
+++ b/src/stylesheets/helpers/_helpers.scss
@@ -4,8 +4,10 @@
 
 @import 'hacks/hacks',
 'hacks/print',
+'helpers-lists',
 'helpers-glyphs',
-'helpers-bem';
+'helpers-bem',
+'helpers-visibility';
 
 /// Return ems from a pixel value
 /// This assumes a base of `$base-font-size`
@@ -14,19 +16,4 @@
 /// @param {Number} $base [$base-font-size] - The base pixel value
 @function em($px, $base: $base-font-size) {
   @return ($px / $base) + em;
-}
-
-
-/// Hide, but not for screenreaders
-/// @link https://github.com/alphagov/govuk_elements/blob/master/public/sass/elements/_helpers.scss#L24-L35
-.visually-hidden,
-.visuallyhidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
 }
