--- a/web/server/views/layouts/_sidebar.njk
+++ b/web/server/views/layouts/_sidebar.njk
@@ -19,6 +19,7 @@
 							<li><a href="/style-guide/grid">Grid &amp; layout</a></li>
 							<li><a href="/style-guide/typography">Typography</a></li>
 							<li><a href="/style-guide/iconography">Iconography</a></li>
+							<li><a href="/style-guide/utilities">Utilities</a></li>
 						</ul>
 						<h5>
 							<a href="/components/">Components</a>
