--- a/web/server/views/about/installation.njk
+++ b/web/server/views/about/installation.njk
@@ -39,7 +39,7 @@
 			<h2>Git clone latest</h2>
 			<p>
 				{% source -%}
-					git clone https://github.com/nhsevidence/NICE.Bootstrap2.git
+					git clone https://github.com/nhsevidence/nice-experience.git
 				{%- endsource %}
 			</p>
 		</section>
@@ -47,7 +47,7 @@
 		<section id="zip">
 			<h2>Download latest ZIP</h2>
 			<p>
-				<a href="https://github.com/nhsevidence/NICE.Bootstrap2/archive/master.zip" class="btn">Download latest ZIP</a>
+				<a href="https://github.com/nhsevidence/nice-experience/archive/master.zip" class="btn">Download latest ZIP</a>
 			</p>
 		</section>
 
