--- a/web/server/views/index.njk
+++ b/web/server/views/index.njk
@@ -1,5 +1,5 @@
 {% extends "layouts/_layout.njk" %}
-{% set title = "NICE Bootstrap v2" %}
+{% set title = "NICE Experience" %}
 
 {% macro item(title, href, description) %}
 	<div data-g="12 xs:6 sm:4 md:3">
@@ -25,7 +25,7 @@
 
 		<p>
 			<a class="btn btn--primary" href="/about/installation">Install</a>
-			<a class="btn btn--secondary" target="_blank" rel="external" href="https://github.com/nhsevidence/NICE.Bootstrap2">View on GitHub</a>
+			<a class="btn btn--secondary" target="_blank" rel="external" href="https://github.com/nhsevidence/nice-experience">View on GitHub</a>
 		</p>
 
 		<h3 class="heading heading--separator">Style Guide</h3>
