--- a/web/server/views/style-guide/index.njk
+++ b/web/server/views/style-guide/index.njk
@@ -32,7 +32,7 @@
 
 			{{ item("Iconography", "/style-guide/iconography", "Icons and their usage, how to create icons") }}
 
-			{{ item("Utilities", "/style-guide/utilities", "Utility classes and helpers") }}
+			{{ item("Utilities", "/style-guide/utilities", "Utility classes and helpers for showing and hiding elements") }}
 
 		</div>
 	</div>
