--- a/web/server/views/style-guide/buttons.njk
+++ b/web/server/views/style-guide/buttons.njk
@@ -17,17 +17,56 @@
 		<h2>Button styles</h2>
 
 		<ul>
-			<li>Buttons can be <code>&lt;a&gt;</code>, <code>&lt;button&gt;</code> or <code>&lt;input&gt;</code></li>
-			<li>Use BEM modifiers for different types</li>
+			<li>buttons can be <code>&lt;a&gt;</code>, <code>&lt;button&gt;</code> or <code>&lt;input&gt;</code></li>
+			<li>use BEM modifiers for different types/sizes</li>
+			<li>avoid excessively long button text</li>
+			<li>make sure the button text describes an action</li>
 		</ul>
 
 		{% example "html" -%}
-			<div class="panel panel--dark">
-				<p><button type="button" class="btn">Default button</button></p>
-				<p><a href="#" class="btn btn--primary">Primary button</a></p>
-				<p><input type="button" class="btn btn--secondary" value="Subtle secondary" /></p>
-			</div>
+			<p>
+				<a href="#" class="btn btn--primary">Primary button</a>
+				<button type="button" class="btn">Default button</button>
+				<input type="button" class="btn btn--secondary" value="Subtle, secondary button" />
+			</p>
 		{%- endexample %}
+
+		<h3>Primary buttons</h3>
+
+		<ul>
+			<li>Limit to just one primary action per page</li>
+			<li>Use for strong, emphasis on the key user journey</li>
+		</ul>
+
+		{% example "html" -%}
+			<p><a href="#" class="btn btn--primary">Find NICE guidance</a></p>
+		{%- endexample %}
+
+		<h3>CTA buttons</h3>
+
+		<p>
+			Use a main call-to-action button when the user is moving forward in a path, conveying a sense of purpose and urgency.
+			For example 'Register now', 'Contact us' or 'Join the mailing list'.
+		</p>
+
+		<ul>
+			<li>try to have as few call-to-action buttons per page as possible - just one is best</li>
+		</ul>
+
+		{% example "html" -%}
+			<p><a href="#" class="btn">Register now</a></p>
+		{%- endexample %}
+
+		<h3>Standard buttons</h3>
+
+		<p>
+			Use the standard button for normal actions, do something within the page, typically to reveal more information, for example: 'View guidance consultations', 'List of guidelines' or 'Advice listing'.
+		</p>
+
+		{% example "html" -%}
+			<p><a href="#" class="btn btn--secondary">View guidance consultations</a></p>
+		{%- endexample %}
+
 	</section>
 
 	<section id="sizes">
