--- a/src/stylesheets/helpers/hacks/_print.scss
+++ b/src/stylesheets/helpers/hacks/_print.scss
@@ -1,68 +1,98 @@
+////
+/// @group helpers
+////
+
+.show-print,
+.show-print--i,
+.show-print-ib {
+  @include important(display, none);
+}
+
+@media print {
+  .show-print {
+    @include important(display, block);
+  }
+
+  .show-print--i {
+    @include important(display, inline);
+  }
+
+  .show-print--ib {
+    @include important(display, inline-block);
+  }
+
+  .hide-print {
+    @include important(display, none);
+  }
+}
+
+
 // Printing
 // -------------------------
 // Source: https://github.com/h5bp/html5-boilerplate/blob/master/css/main.css
+@if $output-default-print-styles {
+  @media print {
 
-@media print {
+    * {
+      text-shadow: none !important;
+      color: #000 !important; // Black prints faster: h5bp.com/s
+      background: transparent !important;
+      box-shadow: none !important;
+    }
 
-  * {
-    text-shadow: none !important;
-    color: #000 !important; // Black prints faster: h5bp.com/s
-    background: transparent !important;
-    box-shadow: none !important;
-  }
+    a,
+    a:visited {
+      text-decoration: underline;
+    }
 
-  a,
-  a:visited {
-    text-decoration: underline;
-  }
+    a[href]:after {
+      content: " (" attr(href) ")";
+    }
 
-  a[href]:after {
-    content: " (" attr(href) ")";
-  }
+    abbr[title]:after {
+      content: " (" attr(title) ")";
+    }
 
-  abbr[title]:after {
-    content: " (" attr(title) ")";
-  }
+    // Don't show links for images, or javascript/internal links
+    .ir a:after,
+    a[href^="javascript:"]:after,
+    a[href^="#"]:after {
+      content: "";
+    }
 
-  // Don't show links for images, or javascript/internal links
-  .ir a:after,
-  a[href^="javascript:"]:after,
-  a[href^="#"]:after {
-    content: "";
-  }
+    pre,
+    blockquote {
+      border: 1px solid #999;
+      page-break-inside: avoid;
+    }
 
-  pre,
-  blockquote {
-    border: 1px solid #999;
-    page-break-inside: avoid;
-  }
+    thead {
+      display: table-header-group; // h5bp.com/t
+    }
 
-  thead {
-    display: table-header-group; // h5bp.com/t
-  }
+    tr,
+    img {
+      page-break-inside: avoid;
+    }
 
-  tr,
-  img {
-    page-break-inside: avoid;
-  }
+    img {
+      max-width: 100% !important;
+    }
 
-  img {
-    max-width: 100% !important;
-  }
+    @page {
+      margin: 0.5cm;
+    }
 
-  @page {
-    margin: 0.5cm;
-  }
+    p,
+    h2,
+    h3 {
+      orphans: 3;
+      widows: 3;
+    }
 
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3;
-  }
-
-  h2,
-  h3 {
-    page-break-after: avoid;
+    h2,
+    h3 {
+      page-break-after: avoid;
+    }
   }
 }
