#126 Add YouTube logo for putting in footer

--- a/src/stylesheets/typography/_typography-icons.scss
+++ b/src/stylesheets/typography/_typography-icons.scss
@@ -97,7 +97,8 @@ $nice-icons: (
   twitter: "f14b",
   uptake: "f14c",
   user: "f14d",
-  warning: "f14e"
+  warning: "f14e",
+  youtube: "f14f"
 ) !default;
 
 @mixin icon-base {
