Add new square verion of social media iocns

--- a/src/stylesheets/typography/_typography-icons.scss
+++ b/src/stylesheets/typography/_typography-icons.scss
@@ -63,42 +63,44 @@ $nice-icons: (
   infoforpublic: "f129",
   information: "f12a",
   lines: "f12b",
-  linkedin: "f12c",
-  logo-name: "f12d",
-  logo: "f12e",
-  minus: "f12f",
-  news: "f130",
-  next: "f131",
-  ok: "f132",
-  pathways-node: "f133",
-  pathways: "f134",
-  play: "f135",
-  plus-circle: "f136",
-  plus: "f137",
-  podcast: "f138",
-  prescribing: "f139",
-  previous: "f13a",
-  print: "f13b",
-  quote-left: "f13c",
-  quote-right: "f13d",
-  readnews: "f13e",
-  remove: "f13f",
-  search: "f140",
-  share: "f141",
-  sort-down: "f142",
-  sort-up: "f143",
-  sort: "f144",
-  spinner: "f145",
-  standards: "f146",
-  stop: "f147",
-  support: "f148",
-  syndication: "f149",
-  trash: "f14a",
-  twitter: "f14b",
-  uptake: "f14c",
-  user: "f14d",
-  warning: "f14e",
-  youtube: "f14f"
+  linkedin-square: "f12c",
+  linkedin: "f12d",
+  logo-name: "f12e",
+  logo: "f12f",
+  minus: "f130",
+  news: "f131",
+  next: "f132",
+  ok: "f133",
+  pathways-node: "f134",
+  pathways: "f135",
+  play: "f136",
+  plus-circle: "f137",
+  plus: "f138",
+  podcast: "f139",
+  prescribing: "f13a",
+  previous: "f13b",
+  print: "f13c",
+  quote-left: "f13d",
+  quote-right: "f13e",
+  readnews: "f13f",
+  remove: "f140",
+  search: "f141",
+  share: "f142",
+  sort-down: "f143",
+  sort-up: "f144",
+  sort: "f145",
+  spinner: "f146",
+  standards: "f147",
+  stop: "f148",
+  support: "f149",
+  syndication: "f14a",
+  trash: "f14b",
+  twitter: "f14c",
+  uptake: "f14d",
+  user: "f14e",
+  warning: "f14f",
+  youtube-play: "f150",
+  youtube: "f151"
 ) !default;
 
 @mixin icon-base {
