Add square Facebook icon

--- a/src/stylesheets/typography/_typography-icons.scss
+++ b/src/stylesheets/typography/_typography-icons.scss
@@ -49,58 +49,59 @@ $nice-icons: (
   email-closed: "f11b",
   email-open: "f11c",
   evidence: "f11d",
-  facebook: "f11e",
-  file-blank: "f11f",
-  file-text: "f120",
-  file: "f121",
-  filter: "f122",
-  fullscreen: "f123",
-  google-plus: "f124",
-  group: "f125",
-  guidance: "f126",
-  guideline: "f127",
-  hamburger: "f128",
-  infoforpublic: "f129",
-  information: "f12a",
-  lines: "f12b",
-  linkedin-square: "f12c",
-  linkedin: "f12d",
-  logo-name: "f12e",
-  logo: "f12f",
-  minus: "f130",
-  news: "f131",
-  next: "f132",
-  ok: "f133",
-  pathways-node: "f134",
-  pathways: "f135",
-  play: "f136",
-  plus-circle: "f137",
-  plus: "f138",
-  podcast: "f139",
-  prescribing: "f13a",
-  previous: "f13b",
-  print: "f13c",
-  quote-left: "f13d",
-  quote-right: "f13e",
-  readnews: "f13f",
-  remove: "f140",
-  search: "f141",
-  share: "f142",
-  sort-down: "f143",
-  sort-up: "f144",
-  sort: "f145",
-  spinner: "f146",
-  standards: "f147",
-  stop: "f148",
-  support: "f149",
-  syndication: "f14a",
-  trash: "f14b",
-  twitter: "f14c",
-  uptake: "f14d",
-  user: "f14e",
-  warning: "f14f",
-  youtube-play: "f150",
-  youtube: "f151"
+  facebook-square: "f11e",
+  facebook: "f11f",
+  file-blank: "f120",
+  file-text: "f121",
+  file: "f122",
+  filter: "f123",
+  fullscreen: "f124",
+  google-plus: "f125",
+  group: "f126",
+  guidance: "f127",
+  guideline: "f128",
+  hamburger: "f129",
+  infoforpublic: "f12a",
+  information: "f12b",
+  lines: "f12c",
+  linkedin-square: "f12d",
+  linkedin: "f12e",
+  logo-name: "f12f",
+  logo: "f130",
+  minus: "f131",
+  news: "f132",
+  next: "f133",
+  ok: "f134",
+  pathways-node: "f135",
+  pathways: "f136",
+  play: "f137",
+  plus-circle: "f138",
+  plus: "f139",
+  podcast: "f13a",
+  prescribing: "f13b",
+  previous: "f13c",
+  print: "f13d",
+  quote-left: "f13e",
+  quote-right: "f13f",
+  readnews: "f140",
+  remove: "f141",
+  search: "f142",
+  share: "f143",
+  sort-down: "f144",
+  sort-up: "f145",
+  sort: "f146",
+  spinner: "f147",
+  standards: "f148",
+  stop: "f149",
+  support: "f14a",
+  syndication: "f14b",
+  trash: "f14c",
+  twitter: "f14d",
+  uptake: "f14e",
+  user: "f14f",
+  warning: "f150",
+  youtube-play: "f151",
+  youtube: "f152"
 ) !default;
 
 @mixin icon-base {
