Add square twitter icon

--- a/src/stylesheets/typography/_typography-icons.scss
+++ b/src/stylesheets/typography/_typography-icons.scss
@@ -96,12 +96,13 @@ $nice-icons: (
   support: "f14a",
   syndication: "f14b",
   trash: "f14c",
-  twitter: "f14d",
-  uptake: "f14e",
-  user: "f14f",
-  warning: "f150",
-  youtube-play: "f151",
-  youtube: "f152"
+  twitter-square: "f14d",
+  twitter: "f14e",
+  uptake: "f14f",
+  user: "f150",
+  warning: "f151",
+  youtube-play: "f152",
+  youtube: "f153"
 ) !default;
 
 @mixin icon-base {
