Add square youtube icon

--- a/src/stylesheets/typography/_typography-icons.scss
+++ b/src/stylesheets/typography/_typography-icons.scss
@@ -102,7 +102,8 @@ $nice-icons: (
   user: "f150",
   warning: "f151",
   youtube-play: "f152",
-  youtube: "f153"
+  youtube-square: "f153",
+  youtube: "f154"
 ) !default;
 
 @mixin icon-base {
