--- a/src/stylesheets/components/_components-footer.scss
+++ b/src/stylesheets/components/_components-footer.scss
@@ -2,9 +2,233 @@
 /// @group components
 ////
 
+
 /// Site footer
 ///
-.footer {
-  background: get-color(grey, dark);
+.site-footer {
+  @include font-size(-1);
+  background: get-colour(grey, dark);
   color: $white;
+  padding: scut-em(32px 0);
+
+  a {
+    color: $white;
+
+    &:focus {
+      color: #000;
+    }
+  }
+
+  p {
+    @include font-size(-1, 1.6);
+  }
+
+  &__logo {
+    display: block;
+    margin: scut-em(0 0 32 0);
+    text-decoration: none;
+
+    .icon {
+      @include font-size(9);
+    }
+  }
+
+  &__services {
+    margin: scut-em(0 0 32 0);
+  }
+
+  &__social {
+    clear: both;
+    margin: scut-em(0 0 32 0);
+  }
+
+  &__nav {
+    clear: both;
+    margin: scut-em(0 0 32 0);
+  }
+
+  &__copyright {
+    margin: 0;
+    text-align: center;
+  }
+
+  @include mq($from: sm) {
+    &__logo {
+      float: left;
+      margin: scut-em(0 32 32 0);
+    }
+
+    &__services {
+      float: left;
+      margin: scut-em(0 0 32 0);
+    }
+
+    &__social {
+      clear: both;
+    }
+
+    &__copyright {
+      text-align: left;
+    }
+  }
+
+  @include mq($from: md) {
+
+    &__social {
+      clear: none;
+      float: right;
+    }
+  }
+}
+
+/// Services list - ie.g. service icon and name.
+/// Stacked on mobile, and side-by-side on larger screen widths
+.services {
+
+  &__list {
+    list-style: none;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+  }
+
+  &__item {
+    border-bottom: 1px solid get-colour(grey);
+
+    &:first-child {
+      border-top: 1px solid get-colour(grey);
+    }
+
+    a {
+      @include font-size(-1, 1.3);
+      color: get-colour(grey, light);
+      display: block;
+      padding: scut-em(8 0);
+      text-decoration: none;
+
+      &:hover {
+        color: $white;
+      }
+
+      &:focus {
+        color: $black;
+      }
+    }
+
+    .icon {
+      @include font-size(1);
+      display: inline-block;
+      margin: scut-em(0 4 0 0);
+      vertical-align: middle;
+    }
+  }
+
+  @include mq($from: sm) {
+
+    &__item {
+      border: 0;
+      float: left;
+      text-align: center;
+      width: scut-em(90px);
+
+      &:first-child {
+        border: 0;
+      }
+
+      a {
+        padding: scut-em(4px) 0 0;
+      }
+    }
+
+    .icon {
+      @include font-size(6);
+      display: block;
+      margin: 0 auto scut-em(4px) auto;
+
+      // The following is needed for IE8 to go centrally aligned
+      &:before {
+        text-align: center;
+        width: 100%;
+      }
+    }
+  }
+}
+
+/// List of social networks icons
+.social-networks {
+
+  &__heading {
+    @include font-size(-1);
+    display: inline-block;
+    font-weight: normal;
+    margin: scut-em(0 8 0 0);
+    padding: 0;
+    vertical-align: top;
+  }
+
+  &__list {
+    display: inline;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  &__item {
+    display: inline-block;
+
+    .icon {
+      @include font-size(4);
+    }
+  }
+
+  a {
+    display: block;
+    padding: scut-em(0 4);
+    text-decoration: none;
+
+    &:focus, &:active {
+      color: $black;
+    }
+  }
+}
+
+/// Footer navigation - list of links that stacks on mobile and is side-by-side on wider screen widths
+.footer-nav {
+  &__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  &__item {
+  }
+
+  a {
+    padding: scut-em(4 0);
+    text-decoration: none;
+  }
+
+  @include mq($from: sm) {
+    &__list {
+      line-height: 1;
+    }
+
+    &__item {
+      border-left: 1px solid $white;
+      display: inline-block;
+      line-height: 1;
+
+      &:first-child {
+        border-left: 0;
+
+        a {
+          padding-left: 0;
+        }
+      }
+    }
+
+    a {
+      padding: scut-em(0 8);
+    }
+  }
 }
