#43 Add option to disable responsive grid output from a variable

--- a/src/stylesheets/grid/_grid-settings.scss
+++ b/src/stylesheets/grid/_grid-settings.scss
@@ -3,4 +3,4 @@
 ////
 
 // The width of the spacing between grid items
-$grid-gutter: scut-em(24px) !default;
+$nice-grid-gutter: scut-em(24px) !default;
