--- a/src/stylesheets/grid/_grid-helpers.scss
+++ b/src/stylesheets/grid/_grid-helpers.scss
@@ -40,7 +40,7 @@
   letter-spacing: -.31em;
   list-style: none;
   margin: 0;
-  margin-left: -$grid-gutter;
+  margin-left: -$nice-grid-gutter;
   padding: 0;
   word-spacing: -.43em;
 
@@ -115,7 +115,7 @@
   direction: ltr;
   display: inline-block;
   letter-spacing: normal;
-  padding-left: $grid-gutter;
+  padding-left: $nice-grid-gutter;
   position: relative;
   text-align: left;
   vertical-align: top;
