--- a/src/stylesheets/settings/_settings-variables.scss
+++ b/src/stylesheets/settings/_settings-variables.scss
@@ -11,7 +11,7 @@ $nice-breakpoints: (
   ),
   xs: (
     width: 440px,
-    root-size: 14,
+    root-size: 15,
     ms-ratio: get-ratio(major-second)
   ),
   sm: (
@@ -21,7 +21,7 @@ $nice-breakpoints: (
   ),
   md: (
     width: 960px,
-    root-size: 16,
+    root-size: 17,
     ms-ratio: get-ratio(major-second)
   ),
   lg: (
@@ -49,3 +49,5 @@ $mq-breakpoints: ();
 /// like avoiding page breaks after headings etc. If you disabled this,
 /// be sure to add your own print styles.
 $output-default-print-styles: true !default;
+
+$nice-responsive: true !default;
