Fix breadcrumb font size issue in IE8

--- a/src/stylesheets/components/_components-breadcrumbs.scss
+++ b/src/stylesheets/components/_components-breadcrumbs.scss
@@ -4,6 +4,7 @@
 
 // See https://www.w3.org/WAI/WCAG20/Techniques/working-examples/G65/ex3.html
 .breadcrumbs {
+  @include font-size(0);
   list-style: none;
   margin: 0;
   padding: scut-em(12 0);
