--- a/src/stylesheets/typography/_typography-lists.scss
+++ b/src/stylesheets/typography/_typography-lists.scss
@@ -30,6 +30,10 @@ ol {
         left: -1.5rem;
         position: absolute;
         top: 0;
+
+        @media print {
+          color: $black;
+        }
       }
     }
 
