--- a/src/stylesheets/helpers/_helpers.scss
+++ b/src/stylesheets/helpers/_helpers.scss
@@ -3,10 +3,10 @@
 ////
 
 @import 'hacks/hacks',
-'hacks/print',
 'helpers-lists',
 'helpers-glyphs',
 'helpers-bem',
+'helpers-print',
 'helpers-visibility';
 
 /// Return ems from a pixel value
